<resources>
    <string name="app_name">VAMZ_Diar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="reminders_button_text">Pripomienky</string>
    <string name="todos_button_text">Úlohy</string>
    <string name="notes_text">Poznámky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note_name_hint">Názov poznámky</string>
    <string name="new_note_text_hint">Text poznámky</string>
    <string name="new_note_save_button">Uložiť poznámku</string>
    <string name="new_note_btn">Nová poznámka</string>
    <string name="login_email">Požívateľský email</string>
    <string name="login_button">Prihlásiť</string>
    <string name="login_password">Heslo</string>
    <string name="register_button">Registrácia</string>
    <string name="LoginBanner">Prihlásenie</string>
    <string name="authError">Skontrolujte zadané údaje</string>
    <string name="login_succes">Úspešne prihlásený.</string>
    <string name="register_succes">Úspešne zaregistrovaný.</string>
    <string name="new_todo_btn">Nový zoznam úloh</string>
    <string name="todos_text">Úlohy</string>
    <string name="notes_button_text">Poznámky</string>
    <string name="todo_item_hint">Úloha</string>
    <string name="todo_name_hint">Názov zoznamu</string>
    <string name="add_new_todoitem">Pridať</string>
    <string name="save_new_todolist">Uložiť zoznam</string>
    <string name="new_todoitem_already_added">Táto úloha sa už v zozname nachádza.</string>
    <string name="new_todo_added">Zoznam bol úspešne vytvorený.</string>
    <string name="new_reminders_button">Nová pripomienka</string>
    <string name="new_reminder_name_hint">Názov pripomienky</string>
    <string name="new_reminder_desc_hint">Popis pripomienky</string>
    <string name="save_new_reminder">Uložiť pripomienku</string>
    <string name="date_picker_past_time">Bol zvolený čas v minulosti.</string>
    <string name="new_reminder_added">Pripomienka bola vytvorená</string>
    <string name="reminders">Reminders</string>
    <string name="note_deleted">Poznámka bola úspešne vymazaná.</string>
    <string name="note_edited">Poznámka bola úspešne upravená.</string>
    <string name="note_added">Poznámka bola úspešne vytvorená.</string>
    <string name="todo_edited">Zoznam úloh bol upravený.</string>
    <string name="todolist_deleted">Zoznam úloh bol vymazaný.</string>
    <string name="reminder_deleted">Pripomienka bola vymazaná</string>
    <string name="action_logout">Odhlásiť</string>
    <string name="logout_message">Boli ste ohlásený.</string>
    <string name="not_logged_in">Nie ste prihlásený.</string>
</resources>