<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">


    <Button
        android:id="@+id/go_to_reminders_from_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminders_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_todos_from_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todos_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="409dp"
        android:layout_height="662dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_todos_from_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>